approval request architecture

--- a/test2/ApprovalRequestsWindow.xaml
+++ b/test2/ApprovalRequestsWindow.xaml
@@ -3,36 +3,43 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:test2"
-        mc:Ignorable="d"
+        xmlns:local="clr-namespace:test2" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:ApprovalRequestsViewModel}"
+        mc:Ignorable="d" xmlns:behaviors="clr-namespace:test2.Behaviors"
         Title="ApprovalRequestsWindow" Height="750" Width="800">
     <Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Height="675">
             <TextBlock TextWrapping="Wrap" Text="Id"/>
-            <TextBox x:Name="IdTextBox" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+            <TextBox x:Name="IdTextBox" Text="{Binding Id}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
             <TextBlock TextWrapping="Wrap" Text="Approver"/>
-            <TextBox x:Name="ApproverTextBox" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+            <TextBox x:Name="ApproverTextBox" Text="{Binding Approver}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
             <TextBlock TextWrapping="Wrap" Text="Leave Request"/>
-            <TextBox x:Name="LeaveRequestTextBox" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+            <TextBox x:Name="LeaveRequestTextBox" Text="{Binding LeaveRequestt}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
             <TextBlock TextWrapping="Wrap" Text="Status"/>
-            <TextBox x:Name="StatusTextBox" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+            <TextBox x:Name="StatusTextBox" Text="{Binding Status}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
             <TextBlock TextWrapping="Wrap" Text="Comment"/>
-            <TextBox x:Name="CommentTextBox" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
-            <Button Content="Filter" Width="200" Click="FilterButton_Click" HorizontalAlignment="Left"/>
+            <TextBox x:Name="CommentTextBox" Text="{Binding Comment}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+            <Button Content="Filter" Command="{Binding FilterCommand}" Width="200" HorizontalAlignment="Left"/>
             
 
             <DataGrid x:Name="ProjectDataGrid" AutoGenerateColumns="False" 
   CanUserAddRows="True" CanUserDeleteRows="True"
   CanUserSortColumns="True" IsReadOnly="True"
-  SelectionMode="Single" MouseDoubleClick="DataGrid_MouseDoubleClick">
+  SelectionMode="Single" ItemsSource="{Binding FilteredApprovalRequests}" 
+          SelectedItem="{Binding SelectedApprovalRequest, Mode=TwoWay}" behaviors:DoubleClickBehavior.Command="{Binding RowDoubleClickCommand}">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Id" Binding="{Binding Id}" IsReadOnly="False"/>
                     <DataGridTextColumn Header="Approver" Binding="{Binding Approver}" IsReadOnly="False"/>
-                    <DataGridTextColumn Header="Leave Request" Binding="{Binding LeaveRequest}" IsReadOnly="False"/>
+                    <DataGridTextColumn Header="Leave Request" Binding="{Binding LeaveRequestt}" IsReadOnly="False"/>
                     <DataGridTextColumn Header="Status" Binding="{Binding Status}" IsReadOnly="False"/>
                     <DataGridTextColumn Header="Comment" Binding="{Binding Comment}" IsReadOnly="False"/>
    
                 </DataGrid.Columns>
+                <DataGrid.RowStyle>
+                    <Style TargetType="DataGridRow">
+                        <Setter Property="Focusable" Value="True" />
+                        <Setter Property="behaviors:DoubleClickBehavior.Command" Value="{Binding DataContext.RowDoubleClickCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" />
+                    </Style>
+                </DataGrid.RowStyle>
             </DataGrid>
         </StackPanel>
     </Grid>
